--- a/origfiles/etc/janus/janus.jcfg.sample
+++ b/origfiles/etc/janus/janus.jcfg.sample
@@ -264,8 +264,8 @@ nat: {
 	# Multiple public IP addresses can be specified as a comma separated list
 	# if the Janus is deployed in a DMZ between two 1-1 NAT for internal and
 	# external users.
-	nat_1_1_mapping = "51.178.18.91"
-	keep_private_host = true
+	#nat_1_1_mapping = "1.2.3.4"
+	#keep_private_host = true
 
 	# You can configure a TURN server in two different ways: specifying a
 	# statically configured TURN server, and thus provide the address of the
